--- a/jwt-client-demo/package.json
+++ b/jwt-client-demo/package.json
@@ -2,7 +2,7 @@
   "name": "jwt-client",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "guangping.feng <gping.feng@vipshop.com>",
+  "author": "wangmiao tuziling84@gmail.com",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
